# cets-data-models

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: codegen.yml  conventional-commits.yml  lint.yml  release-please.yml  test.yml
cets_data_model/models/: ctf_model.py
cets_data_model/utils/: image_utils.py
data-models/: models.py
datamodels/: models.py
datamodels/models/: tomogram.py  tomogram_model.py
datamodels/utils/: em_file_readers.py
docs/: conf.py
docs/source/: standard_names.rst  standard_transformations.rst
model_gen/: patch_config.yaml  patch_models.py
model_processing/: generate_models.py  patch_config.yaml  patch_models.py
model_processing/templates/: base_model.py.jinja
schema/linkml/: alignment.yaml  annotation.yaml  common.yaml  coordinate_systems.yaml  coordinate_transforms.yaml  entities.yaml  image.yaml  image_entities.yaml  test_enum_defaults.yaml
scripts/: compare_models.py  post_model_gen_additions.py
src/cets_data_model/: __init__.py  standard_coordinate_systems.py  standard_names.py  standard_transformations.py
src/cets_data_model/models/: ctf_model.py  gen_models.py  mixins.py  models.py  tilt_image_model.py  tilt_images_model.py  tomogram_model.py
src/cets_data_model/utils/: coordinate_systems.py  image_utils.py  transforms.py  validator.py
tests/: test_cets_models.py  test_model_gen.py  test_standard_transformations.py  test_utils.py  testing_tools.py
tests/test_data/: expected_dataset.json  expected_dataset_with_errors.json  mrc_stack.mrcs  single.mrc  single.tif  tiff_stack.tiff
